disabled/jaeger/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: observability
  annotations:
    link.argocd.argoproj.io/external-link: https://jaeger.cluster.sciops.net
spec:
  hosts:
    - "jaeger.cluster.sciops.net"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 16686 #80 or 16686
            host: jaeger-query.observability.svc.cluster.local
